--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,8 @@ package:
     - package.json
     - package-lock.json
     - requirements.txt
+    - requirements-dev.txt
+    - todos/test/**
 
 provider:
   name: aws
