Adding Coverall for test coverage (#3)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,15 @@ jobs:
           name: run tests
           command: |
             . env/bin/activate
-            nosetests
+            nosetests --with-coverage
+
+      # run coveralls!
+      - run:
+          name: coveralls
+          command: |
+            . env/bin/activate
+            coveralls
+          when: on_success
 
       - store_artifacts:
           path: test-reports
