Upgrading to latest serverless-python-requirements

--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "serverless-python-requirements": "^2.4.1"
+    "serverless-python-requirements": "3.0.1"
   }
 }
