--- a/serverless.yml
+++ b/serverless.yml
@@ -118,3 +118,9 @@ resources:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
         TableName: ${self:provider.environment.DYNAMODB_TABLE}
+
+custom:
+  pythonRequirements:
+    noDeploy:
+      - boto3
+      - botocore
